# dexmoney

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.apps.yml  docker-compose.portainer.yml  docker-compose.yml  restart.sh
.github/ISSUE_TEMPLATE/: diagnostic.md
contracts/: foundry.toml
contracts/forge-std/: Script.sol  Test.sol
contracts/script/: ConfigureExecutorTokenWhitelist.s.sol  DeployBalancerV3Adapter.s.sol  DeployExecutor.s.sol  DeployExecutorHub.s.sol  DeployExecutorV2.s.sol  DeployUniswapV4Adapter.s.sol
contracts/src/: BalancerV3Adapter.sol  Executor.sol  ExecutorHub.sol  ExecutorV2.sol  UniswapV4Adapter.sol
contracts/test/: Executor.t.sol  ExecutorHub.t.sol  ExecutorV2.t.sol  UniswapV4Adapter.t.sol
crates/chain/: Cargo.toml
crates/chain/src/: contracts.rs  events.rs  lib.rs  multicall.rs  provider.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  errors.rs  types.rs
crates/dex/: Cargo.toml
crates/dex/src/: aerodrome.rs  balancer_v3.rs  lib.rs  pool_state.rs  quoter.rs  uniswap_v3.rs
crates/execution-manager/: Cargo.toml
crates/execution-manager/src/: eoa_lane.rs  main.rs  simulator.rs  tx_manager.rs
crates/health-monitor/: Cargo.toml
crates/health-monitor/src/: main.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs  listener.rs  main.rs  state_updater.rs
crates/monitor-web/: Cargo.toml
crates/monitor-web/src/: executor_admin.rs  main.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: main.rs  opportunity.rs  risk.rs  strategy.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  postgres.rs  redis.rs  schema.rs
docs/: ARCHITECTURE.md  CODEX_HANDOFF.md  COMPETITOR_DRIVEN_LOOP.md  DEBUG_WORKFLOW.md  INCIDENTS.md  OPERATING_PRIORITIES.md  PATH_GENERATION.md  TODO.md  docker.md  protocol-adapters.md  redis-keys.md
doctor/: README.md  arb_doctor.sh
migrations/: 0001_init.sql  0002_pool_registry.sql  0003_pool_state_warnings.sql  0004_event_source_indexes.sql  0005_pool_state_source.sql  0006_pool_state_validations.sql  0007_transactions_tx_hash_unique.sql  0008_pair_search_config.sql  0008_pool_factory_address.sql  0009_token_search_defaults.sql  0010_observed_transactions.sql  0011_simulation_gas_metrics.sql  0012_simulation_expected_gas_cost.sql  0013_token_registry.sql  0014_observed_pools.sql  0015_factory_registry.sql
ops/: batchsql.sh  classify_observed_pools.sh  clear_stale_redis_ticks.sh  competitor_gap_report.sh  competitor_searcher_pipeline_diag.sh  competitor_shadow_capital_loop.sh  direct_v2_canonical_diag.sh  execution_hub_diag.sh  execution_tx_diag.sh  hub_submitted_failure_diag.sh  minprofit_failure_diag.sh  minprofit_proof_batch.sh  minprofit_recent_focus.sh  nightly_live_diag_loop.sh  opportunity_scarcity_diag.sh  reconcile_tick_coverage.sh  repair_competitor_balancer_v3.sh  replay_minprofit_targets.sh  searcher_quality_diag.sh  sync_executor_config.sh  tick_coverage_diag.sh  v3_tick_repair.sh  v4_state_diag.sh  v4_tick_progress.sh
ops/remote/: competitor-gap-report.sh
