[workspace]
members = [
    "crates/common",
    "crates/chain",
    "crates/storage",
    "crates/dex",
    "crates/recorder",
    "crates/market-data",
    "crates/searcher",
    "crates/execution-manager",
    "crates/monitor-web",
    "crates/health-monitor",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
alloy-primitives = { version = "0.8", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
ethers-core = "2.0"
ethers-signers = "2.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
