[package]
name = "health-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base-arb-chain = { path = "../chain" }
base-arb-common = { path = "../common" }
chrono.workspace = true
redis.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
