[package]
name = "market-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
base-arb-chain = { path = "../chain" }
base-arb-common = { path = "../common" }
base-arb-storage = { path = "../storage" }
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
