[package]
name = "monitor-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
alloy-primitives.workspace = true
base-arb-chain = { path = "../chain" }
base-arb-common = { path = "../common" }
base-arb-storage = { path = "../storage" }
chrono.workspace = true
ethers-core.workspace = true
ethers-signers.workspace = true
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
