[package]
name = "base-arb-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
base-arb-common = { path = "../common" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
