[package]
name = "searcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
base-arb-common = { path = "../common" }
base-arb-dex = { path = "../dex" }
base-arb-storage = { path = "../storage" }
chrono.workspace = true
futures = "0.3"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
