[package]
name = "base-arb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base-arb-chain = { path = "../chain" }
base-arb-common = { path = "../common" }
chrono.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
hex = "0.4"
